--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,13 +41,14 @@ android {
 dependencies {
     def core_version = "1.3.2"
     def appcompat_version = "1.2.0"
-    def constraintlayout_version = "2.0.2"
+    def constraintlayout_version = "2.0.4"
     def recyclerview_version = "1.1.0"
     def junit_version = "4.13"
     def ext_junit_version = "1.1.2"
     def espresso_core_version = "3.3.0"
     def activity_version = "1.1.0"
     def lifecycle_version = "2.2.0"
+    def mdc_version = "1.2.1"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -59,8 +60,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    //noinspection LifecycleAnnotationProcessorWithJava8
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation "com.google.android.material:material:$mdc_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
