--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     def room_version = "2.2.5"
     def firebase_version = "26.0.0"
     def okhttp_version = "4.9.0"
+    def glide_version = "4.11.0"
+    def picasso_version = "2.71828"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -81,6 +83,8 @@ dependencies {
     implementation "com.google.firebase:firebase-messaging-ktx"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.squareup.picasso:picasso:$picasso_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
