--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "ru.netology.nmedia"
-        minSdkVersion 29
+        minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -46,54 +46,55 @@ android {
 }
 
 dependencies {
-
-    def lifecycle_version = "2.2.0"
-    def arch_version = "2.1.0"
+    def core_version = "1.3.1"
+    def appcompat_version = "1.2.0"
+    def constraintlayout_version = "2.0.1"
+    def swiperefreshlayout_version = "1.1.0"
+    def coordinatorlayout_version = "1.1.0"
+    def recyclerview_version = "1.1.0"
+    def junit_version = "4.13"
+    def ext_junit_version = "1.1.2"
+    def espresso_core_version = "3.3.0"
     def activity_version = "1.1.0"
+    def lifecycle_version = "2.2.0"
     def mdc_version = "1.2.1"
-    def nav_version = '2.3.2'
-    def frag_version = "1.2.5"
+    def nav_version = "2.3.1"
+    def room_version = "2.2.5"
+    def firebase_version = "26.0.0"
     def glide_version = "4.11.0"
     def retrofit_version = "2.9.0"
     def retrofitgson_version = "2.9.0"
-    def okhttploggin_version = "4.9.0"
-    def room_version = "2.2.6"
+    def okhttplogging_version = "4.9.0"
     def coroutines_version = "1.4.2"
 
-
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'org.greenrobot:eventbus:3.2.0'
-    implementation "com.google.android.material:material:$mdc_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation "androidx.fragment:fragment:$frag_version"
-    implementation "androidx.fragment:fragment-ktx:$frag_version"
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.core:core-ktx:$core_version"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayout_version"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:$coordinatorlayout_version"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation "com.google.android.material:material:$mdc_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation platform("com.google.firebase:firebase-bom:$firebase_version")
+    implementation "com.google.firebase:firebase-messaging-ktx"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitgson_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:$okhttploggin_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-    implementation platform('com.google.firebase:firebase-bom:26.0.0')
-    implementation "com.google.firebase:firebase-messaging-ktx"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttplogging_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
-    testImplementation "androidx.fragment:fragment-testing:$frag_version"
-    testImplementation "androidx.arch.core:core-testing:$arch_version"
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
 }
